# MidasV3

./: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
trading_ui/: __init__.py  app.py
trading_ui/components/: price_widget.py  trading_position.py
trading_ui/styles/: theme.tcss
